<resources>
    <string name="app_name">VideoApp</string>
    <string name="enter_title">Enter Title</string>
    <string name="upload_video">Upload Video</string>
    <string name="addVideo">Add Video</string>
    <string name="add_video">Add Video</string>
    <string name="enter_desc">Description</string>
    <string name="the_title_of_the_video">The title of the video</string>
    <string name="time">dd/MM/yyyy hh:mm</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
</resources>