<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/black">

<!--    VideoView: Play video-->
    <VideoView
        android:id="@+id/videoView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"/>

<!--    TV: title of the video-->
    <TextView
        android:id="@+id/titleTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:fontFamily="sans-serif-condensed"
        android:shadowColor="@color/black"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="2"
        android:layout_above="@+id/timeTv"
        android:text="@string/the_title_of_the_video"
        android:textColor="@color/white"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/timeTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"
        android:shadowRadius="2"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowColor="@color/black"
        android:textColor="@color/white"
        android:text="@string/time"/>

<!--    ProgressBar: show while loading video-->
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/downloadFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/delFab"
        android:layout_marginEnd="18dp"
        app:fabSize="mini"
        android:src="@drawable/ic_save"
        android:layout_marginBottom="5dp"
        android:layout_alignParentEnd="true"
        android:contentDescription="@string/save" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/delFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="80dp"
        android:contentDescription="@string/delete"
        android:src="@drawable/ic_delete"
        app:fabSize="mini" />

</RelativeLayout>