<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddVideoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/titleEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_title"
                    android:inputType="text"
                    android:padding="10dp"
                    android:textSize="15sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <VideoView
                android:id="@+id/videoView"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginTop="5dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/descEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:hint="@string/enter_desc"
                    android:inputType="textCapSentences|textMultiLine"
                    android:minHeight="120dp"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textSize="15sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/default_margin"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/pickVideoFab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/custom_button"
                    android:contentDescription="@string/upload_video"
                    android:drawableBottom="@drawable/ic_add"
                    android:text="@string/add_video"
                    android:textAllCaps="false" />

                <Button
                    android:id="@+id/uploadVideoBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:background="@drawable/custom_button"
                    android:drawableBottom="@drawable/ic_upload"
                    android:text="@string/upload_video"
                    android:textAllCaps="false" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>